<resources>
    <string name="app_name">fwc</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="topics">Topics</string>
    <string name="account">Account</string>

    <string name="welcome_subtitle">The pocket-sized way to overcome your fear of flying</string>
    <string name="get_started">GET STARTED</string>
    <string name="already_registered">I\'M ALREADY REGISTERED</string>
    <string name="create_boarding_pass">CREATE YOUR BOARDING PASS</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="choose_password">Choose a password</string>

    <string name="hint_email_address">Email address</string>
    <string name="hint_password">Password</string>

    <string name="err_msg_first_name">Enter a valid first name</string>
    <string name="err_msg_last_name">Enter a valid last name</string>
    <string name="err_msg_email">Enter a valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="sent_reminder_email">We\'ve sent an email to: \n %1$s \n with a link to reset your password</string>

    <string name="terms_agreement">By signing up you agree to our terms of use and privacy policy</string>
    <string name="sign_in">SIGN IN</string>
    <string name="welcome_back">WELCOME BACK</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="forgot_password">I FORGOT MY PASSWORD</string>
    <string name="back_sign_in">BACK TO SIGN IN</string>
    <string name="reset_password">RESET YOUR PASSWORD</string>


    <string name="network_error">Looks like something went wrong. Try again in a few seconds</string>
    <string name="description">The British Airways Flying With Confidence has been running for over 30 years and helped over 50,000 people overcome their fears. The courses take place throughout the year at airports throughout the UK.</string>
    <string name="set_new_password">SET NEW PASSWORD</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="choose_a_new_password">Choose a new password</string>
    <string name="find_out_more">Find out more</string>
    <string name="attend_a_course">ATTEND A COURSE</string>
    <string name="change_my_password">Change my password</string>
    <string name="update_my_details">Update my details</string>
    <string name="my_account">MY ACCOUNT</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="upcoming_course_dates">Upcoming course dates</string>
    <string name="primary_courses">PRIMARY COURSES</string>
    <string name="there_are_currently_no_primary_ncourse_dates_available">There are currently no primary  course dates available</string>
    <string name="premium_courses">PREMIUM COURSES</string>
    <string name="there_are_currently_no_premium_ncourse_dates_available">There are currently no premium  course dates available</string>
    <string name="about_me">ABOUT ME</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="log_out">Log out</string>
    <string name="an_introduction_to_fwc">An Introduction to Flying With Confidence</string>
    <string name="welcome_aboard">Welcome Aboard</string>
    <string name="watch">WATCH</string>
    <string name="play">PLAY</string>
    <string name="pause">PAUSE</string>
    <string name="done">Done</string>
    <string name="add_to_favourites">ADD TO FAVOURITES</string>
    <string name="remove_favourite">REMOVE FROM FAVOURITES</string>
    <string name="edit">Edit</string>
    <string name="recently_watched">RECENTLY WATCHED</string>
    <string name="my_favourites">MY FAVOURITES</string>

    <string name="no_connection">No internet connection - videos are unavailable offline.</string>


</resources>
