<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/fwc_blue"
    tools:context=".fragments.RegisterFragment"
    android:clickable="true">

    <LinearLayout
        android:id="@+id/createBoardingPass"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/roundedlayout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/create_boarding_pass"
            android:id="@+id/textView"
            android:layout_gravity="center"/>

        <RelativeLayout
            android:id="@+id/seperator1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/lighter_grey" >

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/inputFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:background="@android:color/transparent"
                    android:hint="@string/hint_first_name"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/inputLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:background="@android:color/transparent"
                    android:hint="@string/hint_last_name"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/seperator2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/lighter_grey"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <EditText
                android:id="@+id/inputEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:background="@android:color/transparent"
                android:hint="@string/hint_email_address"/>

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:id="@+id/seperator3"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/lighter_grey" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@android:color/transparent"
                android:hint="@string/choose_password"
                />

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:id="@+id/seperator4"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/lighter_grey" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_agreement"
            android:textAlignment="center"
            android:layout_marginTop="10dp"/>


        <Button
            android:id="@+id/createAccountBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundedbluebutton"
            android:text="@string/create_account"
            android:textColor="@android:color/white"
            android:textSize="17sp" />

    </LinearLayout>

    <Button
        android:id="@+id/alreadyRegisteredBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createBoardingPass"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:text="@string/already_registered"
        android:textColor="@android:color/white"
        android:textSize="15sp"/>

</RelativeLayout>