<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/fwc_blue"
    tools:context=".fragments.SignInFragment"
    android:clickable="true">

    <LinearLayout
        android:id="@+id/boardingPass"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/roundedlayout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/welcome_back"
            android:id="@+id/textView"
            android:layout_gravity="center"/>

        <RelativeLayout
            android:id="@+id/seperator1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/lighter_grey" >

        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:background="@android:color/transparent"
                android:hint="@string/hint_email_address"/>

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:id="@+id/seperator2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/lighter_grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:background="@android:color/transparent"
                    android:hint="@string/hint_password"
                    />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/seperator3"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/lighter_grey" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:background="@drawable/roundedbluebutton"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:textSize="17sp" />

    </LinearLayout>

    <Button
        android:id="@+id/forgotPasswordBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/boardingPass"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:text="@string/forgot_password"
        android:textColor="@android:color/white"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/createAccountBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgotPasswordBtn"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:text="@string/create_account"
        android:textColor="@android:color/white"
        android:textSize="15sp"/>

</RelativeLayout>
