<?xml version="1.0" encoding="utf-8"?>
    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".fragments.account.UpdateDetailsFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/updateDetailsToolbar"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:background="@color/colorWhite"
            android:gravity="center_vertical"
            android:text="@string/update_my_details"
            android:textAlignment="center"
            android:elevation="8dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/darker_grey" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginStart="24dp"
        android:background="@null"
        android:elevation="12dp"
        android:text="@string/cancel"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/fwc_blue"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/updateDetailsToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/updateDetailsToolbar" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginEnd="24dp"
        android:background="@null"
        android:text="@string/save"
        android:elevation="10dp"
        android:textAlignment="viewEnd"
        android:textAllCaps="false"
        android:textColor="@color/fwc_blue"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/updateDetailsToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/updateDetailsToolbar" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/about_me"
        android:textColor="@color/darker_grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateDetailsToolbar" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@color/colorWhite"
            android:padding="16dp"
            android:elevation="2dp"
            app:layout_constraintBottom_toTopOf="@+id/inputLayoutLastName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_chainStyle="spread_inside"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/first_name"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@color/colorWhite"
            android:padding="16dp"
            android:elevation="2dp"
            app:layout_constraintBottom_toTopOf="@+id/inputLayoutEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutFirstName"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/last_name"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@color/colorWhite"
            android:padding="16dp"
            android:elevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutLastName"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="Email address"
                android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

    </android.support.constraint.ConstraintLayout>
