<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/fwc_blue"
    tools:context=".fragments.ResetPwFragment"
    android:clickable="true">

    <!-- TODO: (2) change to constraint layout -->


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/ba_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/boardingPass"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/roundwhiteback"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/reset_password"
            android:id="@+id/textView"
            android:layout_gravity="center"/>

        <RelativeLayout
            android:id="@+id/seperator1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/lighter_grey" >

        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutChoosePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/inputChoosePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@android:color/transparent"
                android:hint="@string/choose_a_new_password"
                />

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:id="@+id/seperator2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/lighter_grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/inputConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:background="@android:color/transparent"
                    android:hint="@string/confirm_new_password"
                    />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/seperator3"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/lighter_grey" />

        <Button
            android:id="@+id/btnSetPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:background="@drawable/roundedbluebutton"
            android:text="@string/set_new_password"
            android:textColor="@android:color/white"
            android:textSize="17sp" />

    </LinearLayout>

</RelativeLayout>